# Task09_fastapi

./: README.md  pyproject.toml  run.py  temp.py
app/: main.py
app/api/: __init__.py  utils.py
app/api/routes/: __init__.py  patient.py  project.py  project_study.py  study.py  text_report.py
app/model/: query.py  series.py  study.py
app/schema/: base.py  patient.py  project.py  project_study.py  study.py  text_report.py
exceptions/: handle.py
src/app/: main.py
src/app/api/: __init__.py  utils.py
src/app/api/routes/: __init__.py  base.py  patient.py  project.py  study.py
src/app/core/: __init__.py  config.py
src/app/model/: ai_model.py  base.py  file.py  patient.py  project.py  study.py
src/app/schema/: base.py  patient.py  project.py
