[project]
name = "Task09_fastapi"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "SeanHo", email = "a03440@tmu.edu.tw"},
]
dependencies = [
    "fastapi==0.109.2",
    "SQLAlchemy==2.0.6",
    "PyJWT==2.8.0",
    "passlib[bcrypt]==1.7.4",
    "uvicorn>=0.30.1",
    "sentry-sdk==1.41.0",
    "pydantic-settings==2.2.1",
    "psycopg2-binary==2.9.9",
    "pydantic>=2.7.4",
    "sqlmodel>=0.0.18",
    "fastapi-pagination==0.12.25",
    "sqlalchemy-filters==0.13.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
